# vending-bench

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
results/: history.csv  history.parquet
src/: test_xai_connectivity.py  vending_sim.py
